2002-01-05  Glenn Randers-Pehrson  <randeg@alum.rpi.edu>
        * Fixed an out-of-bounds memset() and two other memory overruns
          when decoding 1-bit AVI, BMP, and DIB images.

2002-01-04 Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
        * Fix lcms header inclusion in transform.c.

2002-01-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* coders/wmf.c (magick_brush): Fixed bug with setting fill color.

2002-01-03  Cristy  <cristy@mystic.es.dupont.com>
	* Postscript Level II is now DCS compliant.

2001-12-28  Leonard Rosenthol  <leonardr@lazerware.com>
	* Even more features and options were added to conjure
	* Added CropBox support to PDF writer
	
2001-12-26  Leonard Rosenthol  <leonardr@lazerware.com>
	* Conjure now supports having a list of files for the script to
  	process being passed on the command line.
	* More features and options were added to conjure
	
2001-12-25  Leonard Rosenthol  <leonardr@lazerware.com>
	* Made a huge number of improvements to conjure.  It now supports
	  over 15 different commands for manipulating your images.

2001-12-24  Cristy  <cristy@mystic.es.dupont.com>
	* Started a new scripting language utility, conjure.

2001-12-20  Cristy  <cristy@mystic.es.dupont.com>
	* Display the search path in the event a utility cannot find a
	  particular configuration file (thanks to billr@corbis.com)

2001-12-14  Leonard Rosenthol  <leonardr@lazerware.com>
	* Fixed some bugs in the new composite operators.

2001-12-14  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
	* Added native BLOB support to coders/wmf.c.

2001-12-13  Leonard Rosenthol  <leonardr@lazerware.com>
	* Added new composite operators to support PSD/XCF
  	layer compositing:  NoCompositeOp, DarkenCompositeOp,
  	LightenCompositeOp, HueCompositeOp, SaturateCompositeOp,
  	ValueCompositeOp, ColorizeCompositeOp, LuminizeCompositeOp,
  	ScreenCompositeOp, OverlayCompositeOp.
	* Modified the PSD coder to set the appropriate composite
	  operator.